fix my-profile on mobile

--- a/themes/Migliori/css/addresses.css
+++ b/themes/Migliori/css/addresses.css
@@ -24,4 +24,17 @@
 .bloc_adresses h3.page-subheading{
   margin-top: 0;
 }
+
+@media (max-width: 768px){
+  .address li.address_update a {
+    margin-bottom: 10px; }
+  #addresses ul.footer_links{
+    text-align: center;  }    
+  #addresses ul.footer_links li,
+  #addresses ul.footer_links li:last-child{
+    float: none;
+    margin-bottom: 10px;  }  
+  #addresses ul.footer_links li +li{
+    margin-left: 0;  }  
+}
 /*# sourceMappingURL=addresses.css.map */
